2022-03-26 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/Makefile.in:
	  Fix an issue in test-host regression test output, fix suggested via chat by Felix Salfelder (felixs).

2022-03-26 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bitintvararg.c.in:
	  Disable a test for clang 11.0 host, where it fails.
	* device/lib/tlcs90/atomic_flag_test_and_set.s:
	  Bring back previous atomic_flag_test_and_set implementation as comment, explain why it was chosen, and under which circumstances we might want to revert back to it.

2022-03-26 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sim/ucsim/tlcs.src/inst_arith.cc
	  sim/ucsim/tlcs.src/inst_bit.cc
	  sim/ucsim/tlcs.src/inst_jump.cc
	  sim/ucsim/tlcs.src/tlcs.cc:
	  Add partial cycle counting.

2022-03-26 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/include/stdatomic.h,
	  device/lib/atomic_flag_clear.c,
	  device/lib/tlcs90/atomic_flag_test_and_set.s:
	  Switch to faster atomic test with shift. (8T vs 12T)

2022-03-25 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/Makefile.in,
	  support/regression/generate-cases.py,
	  support/regression/tests/*.c.in:
	  Regression test infrastructure improvements, picked from patch #430 by Felix Salfelder (felixs).

2022-03-25 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/Makefile.in:
	  Regression test infrastructure improvements, picked from patch #430 by Felix Salfelder (felixs).

2022-03-25 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCglobl.h,
	  src/SDCCglue.c,
	  src/z80/main.c,
	  src/z80/z80.h,
	  support/regression/ports/ucz80-undoc,
	  support/regression/Makefile.in,
	  src/z80/gen.c:
	  Support for undocumented Z80 instructions.

2022-03-25 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asz80/z80mch.c:
	  Disable undocumented instructions for Z180.
